# rusty-neural-net

./: .gitignore  Cargo.toml  README.md
src/: graph.rs  input.rs  main.rs  network.rs  new_main.rs  pet_graph.rs
src/graph/: data_structures.rs  layer.rs  training.rs
src/input/: input_file.rs  input_image.rs
