cargo-features = ['strip']

[package]
name = "rusty-neural-net"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
float-cmp = "0.9.0"
rand = "0.8.4"
image = "0.23.14"
rayon = "1.5.1"


[profile.release]
lto = true
codegen-units = 1
opt-level = 3
strip = true
